<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ProfileActivity">

    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/layout_toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView_flower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/flower" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_flower" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_age_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/age"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_name_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/phone"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_age_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_bodyWeight_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/body_weight"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_phone_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_husbandName_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/husband_s_name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_bodyWeight_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_fatherName_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/father_s_name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_husbandName_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_motherName_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/mother_s_name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_fatherName_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_sisterName_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/sister_s_name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_motherName_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_countryName_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/country_name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_sisterName_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/name"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView_name_label"
                app:layout_constraintStart_toEndOf="@+id/textView_name_label"
                app:layout_constraintTop_toTopOf="@+id/textView_name_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_age_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/age"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView_age_label"
                app:layout_constraintStart_toEndOf="@+id/textView_age_label"
                app:layout_constraintTop_toTopOf="@+id/textView_age_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_phone_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/phone"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView_phone_label"
                app:layout_constraintStart_toEndOf="@+id/textView_phone_label"
                app:layout_constraintTop_toTopOf="@+id/textView_phone_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_bodyWeight_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/body_weight"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView_bodyWeight_label"
                app:layout_constraintStart_toEndOf="@+id/textView_bodyWeight_label"
                app:layout_constraintTop_toTopOf="@+id/textView_bodyWeight_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_husbandName_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/husband_s_name"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView_husbandName_label"
                app:layout_constraintStart_toEndOf="@+id/textView_husbandName_label"
                app:layout_constraintTop_toTopOf="@+id/textView_husbandName_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_fatherName_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/father_s_name"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView_fatherName_label"
                app:layout_constraintStart_toEndOf="@+id/textView_fatherName_label"
                app:layout_constraintTop_toTopOf="@+id/textView_fatherName_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_motherName_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/mother_s_name"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView_motherName_label"
                app:layout_constraintStart_toEndOf="@+id/textView_motherName_label"
                app:layout_constraintTop_toTopOf="@+id/textView_motherName_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_sisterName_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/sister_s_name"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView_sisterName_label"
                app:layout_constraintStart_toEndOf="@+id/textView_sisterName_label"
                app:layout_constraintTop_toTopOf="@+id/textView_sisterName_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_countryName_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/country_name"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView_countryName_label"
                app:layout_constraintStart_toEndOf="@+id/textView_countryName_label"
                app:layout_constraintTop_toTopOf="@+id/textView_countryName_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>